--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: blueviolet;
-    color: beige;
+    color: rgb(245, 220, 243);
     section {
         background: rgb(91, 49, 131);
         padding-bottom: 80px;
